resources/webidl2/test/invalid/baseline/no-semicolon-callback.txt
Syntax error at line 5, since `callback interface NoSemicolon`:
enum YouNeedOne {
^ Missing semicolon after interface
